--- a/resources/assets/sass/_materialCheckbox.scss
+++ b/resources/assets/sass/_materialCheckbox.scss
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);/*Page styles*/
+
+/*Page styles*/
 
 .boxes {
   margin: auto;
@@ -7,10 +8,7 @@
 }
 
 /*Checkboxes styles*/
-
-input[type="checkbox"] {
-  display: none;
-}
+input[type="checkbox"] { display: none; }
 
 input[type="checkbox"] + label {
   display: block;
@@ -18,16 +16,14 @@ input[type="checkbox"] + label {
   padding-left: 35px;
   margin-bottom: 20px;
   font: 14px/20px 'Open Sans', Arial, sans-serif;
-  color: black;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
 
-input[type="checkbox"] + label:last-child {
-  margin-bottom: 0;
-}
+input[type="checkbox"] + label:last-child { margin-bottom: 0; }
 
 input[type="checkbox"] + label:before {
   content: '';
@@ -55,9 +51,4 @@ input[type="checkbox"]:checked + label:before {
   transform: rotate(45deg);
 }
 
-.navbar-laravel {
-  background-color: #fff;
-  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
 
